--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "install": "^0.13.0",
     "npm": "^6.14.5",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "react-textarea-autosize": "^8.0.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "uuid": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
