--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "3.4.1",
     "react-textarea-autosize": "^8.0.1",
     "redux": "^4.0.5",
+    "styled-components": "^5.1.1",
     "uuid": "^8.1.0"
   },
   "scripts": {
