--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "kanbanboard",
-  "version": "0.1.0",
+  "name": "kanban-board",
+  "homepage": "http://nicolasnazzaro.github.io/kanban-board",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.10.0",
@@ -23,6 +24,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
